2004-04-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* testcases.sml: Add a nasty case that is still wrong.

	* sml-proc.el (sml-error-regexp-alist): Tune the regexp for sml/nj.

	* sml-mode.el (sml-mode): Batter handle paragraphs in comments.
	(sml-mode-variables): Clean up paragraph settings.
	(sml-electric-pipe): Fix a boundary bug.
	(sml-indent-starter, sml-get-sym-indent, sml-find-matching-starter):
	Fix indentation algorithm.  Can't remember what it was about.
	This code is nasty, I just can't understand what's doing what.
	(completion-ignored-extensions): Add the new .cm directory.

2003-12-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* sml-defs.el (sml-mode-menu): Fix typo.  Use std names.
	(sml-begin-syms-re): Reduce redundancy.

2001-09-18  Stefan Monnier  <monnier@cs.yale.edu>

	* sml-mode.el (sml-tyvarseq-re): Fix typo.

2001-07-20  Stefan Monnier  <monnier@cs.yale.edu>

	* sml-mode.el (sml-rightalign-and): New defcustom.
	(sml-tyvarseq-re): New var.
	(sml-font-lock-keywords): Use it.
	(sml-imenu-create-index): Don't get confused by tyvarseq's.
	(sml-mode-variables): Don't set `comment-column'.
	(sml-funname-of-and): New function.
	(sml-electric-pipe): Use it.
	(sml-find-comment-indent): Try to ignore comment-markers in strings.
	(sml-calculate-indentation): Handle closing parens specially.
	(sml-indent-pipe): Recognize the case where `and' defines a datatype.
	(sml-dangling-sym): Make it work if the symbol is an open-paren.
	(sml-indent-default): Change the behavior when preceded by `end',
	although I'm not quite sure why.
	Understand dangling open-parens.
	Properly skip *all* subexpressions of lower precedence.
	Allow use of sml-symbol-indent to outdent lines starting with , or ;.
	(sml-insert-form): Use preceding-char to avoid bug at bobp.

2001-07-19  Stefan Monnier  <monnier@cs.yale.edu>

	* sml-proc.el (sml-proc-buffer): Save excursion when calling run-sml.

	* sml-move.el (sml-syntax-prec): Split ; and , from `in' and `with'.
